--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0-beta.2",
+    "@angular/bazel": "^6.0.3",
     "@angular/cli": "~6.1.0-rc.0",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@bazel/ibazel": "^0.5.0",
     "@bazel/typescript": "0.16.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
