--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -1,6 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@angular//:index.bzl", "ng_module")
+load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
 
 ng_module(
     name = "src",
@@ -31,4 +32,32 @@ ts_devserver(
         "index.html",
     ],
     deps = [":src"],
+)
+
+ts_library(
+    name = "test_lib",
+    testonly = 1,
+    srcs = glob(["**/*.spec.ts"]),
+    deps = [
+        ":src",
+        "@angular//packages/core/testing",
+        "@angular//packages/platform-browser-dynamic/testing",
+    ],
+)
+
+ts_web_test_suite(
+    name = "test",
+    srcs = ["//:node_modules/tslib/tslib.js"],
+    # do not sort
+    bootstrap = [
+        "//:node_modules/zone.js/dist/zone-testing-bundle.js",
+        "//:node_modules/reflect-metadata/Reflect.js",
+    ],
+    browsers = [
+        "@io_bazel_rules_webtesting//browsers:chromium-local",
+        "@io_bazel_rules_webtesting//browsers:firefox-local",
+    ],
+    deps = [
+        ":test_lib",
+    ],
 )
