--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -2,6 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("@angular//:index.bzl", "ng_module")
 load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
+load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
 
 ng_module(
     name = "src",
@@ -20,6 +21,7 @@ load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")
 
 ts_devserver(
     name = "devserver",
+    port = 4200,
     additional_root_paths = [
         "__main__/node_modules/zone.js/dist",
         "__main__/node_modules/tslib",
@@ -60,4 +62,10 @@ ts_web_test_suite(
     deps = [
         ":test_lib",
     ],
+)
+
+rollup_bundle(
+    name = "bundle",
+    entry_point = "src/main",
+    deps = ["//src"],
 )
