--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -2,7 +2,8 @@ package(default_visibility = ["//visibility:public"])
 
 load("@angular//:index.bzl", "ng_module")
 load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
-load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
+load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "history_server")
+load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")
 
 ng_module(
     name = "src",
@@ -16,8 +17,23 @@ ng_module(
         "@angular//packages/platform-browser",
     ],
 )
+# Needed because the prodserver only loads static files that appear under this
+# package.
+genrule(
+    name = "zonejs",
+    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
+    outs = ["zone.min.js"],
+    cmd = "cp $< $@",
+)
 
-load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")
+history_server(
+    name = "prodserver",
+    data = [
+        "index.html",
+        ":bundle",
+        ":zonejs",
+    ],
+)
 
 ts_devserver(
     name = "devserver",
