--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/core": "^6.1.7",
-    "@angular/forms": "^6.1.7",
-    "@angular/http": "^6.1.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
-    "@angular/router": "^6.1.7",
+    "@angular/animations": "github:angular/animations-builds#bazel",
+    "@angular/common": "github:angular/common-builds#bazel",
+    "@angular/compiler": "github:angular/compiler-builds#bazel",
+    "@angular/core": "github:angular/core-builds#bazel",
+    "@angular/forms": "github:angular/forms-builds#bazel",
+    "@angular/http": "github:angular/http-builds#bazel",
+    "@angular/platform-browser": "github:angular/platform-browser-builds#bazel",
+    "@angular/platform-browser-dynamic": "github:angular/platform-browser-dynamic-builds#bazel",
+    "@angular/router": "github:angular/router-builds#bazel",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0-beta.2",
-    "@angular/bazel": "^6.1.7",
-    "@angular/cli": "~6.1.0-rc.0",
-    "@angular/compiler-cli": "^6.1.7",
-    "@angular/language-service": "^6.1.7",
+    "@angular-devkit/build-angular": "0.8.4",
+    "@angular/cli": "github:angular/cli-builds#bazel",
+    "@angular/compiler-cli": "github:angular/compiler-cli-builds#bazel",
+    "@angular/language-service": "github:angular/language-service-builds#bazel",
     "@bazel/ibazel": "^0.5.0",
-    "@bazel/typescript": "0.16.2",
+    "@bazel/karma": "0.20.2",
+    "@bazel/typescript": "0.20.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -46,6 +46,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "2.9"
+    "typescript": "3.1.1"
   }
 }
